# sample-flaskapp-on-render

./: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
app/: app.py  hello.py
