[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kosuke Uchida <byebyeearthjpn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
